[gd_scene load_steps=10 format=3 uid="uid://idn0n12031pq"]

[ext_resource type="Script" path="res://Scripts/WallManager.gd" id="1_hafta"]
[ext_resource type="Texture2D" uid="uid://thco2myabj88" path="res://Sprites/ChildRoom/Child_Wall_1_ref.jpg" id="2_b5jw8"]
[ext_resource type="PackedScene" uid="uid://gju0rb3k67eb" path="res://Objects/SceneTransition.tscn" id="2_ollqm"]
[ext_resource type="Texture2D" uid="uid://wyux7fhwimpu" path="res://Sprites/arrow.png" id="2_rrdd6"]
[ext_resource type="Texture2D" uid="uid://dp4h7k2uvo28o" path="res://Sprites/ChildRoom/Child_posters_wall_1.png" id="3_8ilpt"]
[ext_resource type="Script" path="res://Scripts/ArrowScript.gd" id="3_cckgv"]
[ext_resource type="Script" path="res://Scripts/SceneTransition.gd" id="3_fme5s"]
[ext_resource type="PackedScene" uid="uid://di4q12vyggwbe" path="res://Objects/Button.tscn" id="4_hyqm8"]
[ext_resource type="PackedScene" uid="uid://dljwsjpl84nee" path="res://Scenes/BaseIntro.tscn" id="9_jhefb"]

[node name="Room" type="Node2D"]

[node name="Walls" type="Control" parent="." node_paths=PackedStringArray("walls")]
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
script = ExtResource("1_hafta")
walls = [NodePath("Wall1"), NodePath("Wall2"), NodePath("Wall3"), NodePath("Wall4")]
currentWall = 1

[node name="Wall1" type="Control" parent="Walls"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="Label" type="Label" parent="Walls/Wall1"]
layout_mode = 0
offset_left = 616.0
offset_top = 280.0
offset_right = 673.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 100
text = "1"

[node name="TextureRect" type="TextureRect" parent="Walls/Wall1"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_b5jw8")

[node name="Posters" type="Sprite2D" parent="Walls/Wall1"]
position = Vector2(920, 208)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_8ilpt")

[node name="Button" parent="Walls/Wall1/Posters" instance=ExtResource("4_hyqm8")]
offset_left = -224.0
offset_top = -336.0
offset_right = 576.0
offset_bottom = 944.0

[node name="Wall2" type="Control" parent="Walls"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="ColorRect2" type="ColorRect" parent="Walls/Wall2"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.192157, 0.392157, 0.168627, 1)

[node name="Label" type="Label" parent="Walls/Wall2"]
layout_mode = 0
offset_left = 616.0
offset_top = 280.0
offset_right = 673.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 100
text = "2"

[node name="Wall3" type="Control" parent="Walls"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="ColorRect2" type="ColorRect" parent="Walls/Wall3"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.403922, 0.32549, 0.121569, 1)

[node name="Label" type="Label" parent="Walls/Wall3"]
layout_mode = 0
offset_left = 616.0
offset_top = 280.0
offset_right = 673.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 100
text = "3"

[node name="Wall4" type="Control" parent="Walls"]
unique_name_in_owner = true
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0

[node name="ColorRect2" type="ColorRect" parent="Walls/Wall4"]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0.513726, 0.247059, 0.203922, 1)

[node name="Label" type="Label" parent="Walls/Wall4"]
layout_mode = 0
offset_left = 616.0
offset_top = 280.0
offset_right = 673.0
offset_bottom = 420.0
theme_override_font_sizes/font_size = 100
text = "4"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LeftArrow" type="TextureButton" parent="CanvasLayer"]
offset_left = 64.0
offset_top = 296.0
offset_right = 1088.0
offset_bottom = 1320.0
scale = Vector2(0.117188, 0.117188)
texture_normal = ExtResource("2_rrdd6")
script = ExtResource("3_cckgv")

[node name="RightArrow" type="TextureButton" parent="CanvasLayer"]
offset_left = 1096.0
offset_top = 296.0
offset_right = 2120.0
offset_bottom = 1320.0
scale = Vector2(0.117188, 0.117188)
texture_normal = ExtResource("2_rrdd6")
flip_h = true
script = ExtResource("3_cckgv")

[node name="SceneTransition" parent="." instance=ExtResource("2_ollqm")]
script = ExtResource("3_fme5s")
next_scene = ExtResource("9_jhefb")

[connection signal="_arrowPressed" from="CanvasLayer/LeftArrow" to="Walls" method="_on_left_arrow__arrow_pressed"]
[connection signal="pressed" from="CanvasLayer/LeftArrow" to="CanvasLayer/LeftArrow" method="_on_pressed"]
[connection signal="_arrowPressed" from="CanvasLayer/RightArrow" to="Walls" method="_on_right_arrow__arrow_pressed"]
[connection signal="pressed" from="CanvasLayer/RightArrow" to="CanvasLayer/RightArrow" method="_on_pressed"]
